fix: toc active flicker

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -4614,6 +4614,10 @@ button, [role="button"] {
   &:where(.dark, .dark *) {
     color: var(--color-neutral-300);
   }
+  text-decoration-color: var(--clr-primary-600);
+  .dark & {
+    text-decoration-color: var(--clr-primary-400);
+  }
 }
 .toc ul > li {
   &:where(:dir(rtl), [dir="rtl"], [dir="rtl"] *) {
@@ -4851,7 +4855,7 @@ body:has(#mobile-menu-toggle:checked) {
   opacity: 1;
   visibility: visible;
 }
-.active {
+.active-header {
   text-decoration-line: underline;
   text-decoration-thickness: 3px;
   text-underline-offset: 4px;
